--- a/index.html
+++ b/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mahindra Scorpio 3D Model</title>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #f4f4f4;
-    }
-    model-viewer {
-      width: 90%;
-      height: 90%;
-      border-radius: 16px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-    }
-  </style>
-</head>
-<body>
-
-  <model-viewer
-    src="scorpio-compressed.glb"
-    alt="3D Model of Mahindra Scorpio"
-    ar
-    ar-modes="scene-viewer quick-look webxr"
-    camera-controls
-    auto-rotate
-    auto-rotate-delay="3000"
-    rotation-per-second="30deg"
-    environment-image="neutral"
-    shadow-intensity="1"
-    exposure="1.2"
-  >
-  </model-viewer>
-
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>3D Car Viewer</title>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <style>
+      body {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: #f4f4f4;
+      }
+      model-viewer {
+        width: 100%;
+        height: 100%;
+        max-width: 1000px;
+        max-height: 700px;
+      }
+    </style>
+  </head>
+  <body>
+    <model-viewer
+      src="scorpio-compressed.glb"
+      alt="3D Model of Mahindra Scorpio"
+      ar
+      ar-modes="scene-viewer quick-look webxr"
+      camera-controls
+      auto-rotate
+      auto-rotate-delay="3000"
+      rotation-per-second="30deg"
+      environment-image="neutral"
+      shadow-intensity="1"
+      exposure="1.2">
+    </model-viewer>
+  </body>
 </html>
+
