--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Car Viewer</title>
-
-    <!-- Import model-viewer library -->
-    <script
-      type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
-    ></script>
-  </head>
-  <body style="margin:0; display:flex; justify-content:center; align-items:center; height:100vh; background:#f4f4f4;">
-    
-    <!-- 3D Car Viewer with AR -->
-    <model-viewer
-      src="./scorpio-compressed.glb"
-      alt="3D Model of Mahindra Scorpio"
-      ar
-      ar-modes="scene-viewer quick-look webxr"
-      camera-controls
-      auto-rotate
-      auto-rotate-delay="3000"
-      rotation-per-second="30deg"
-      environment-image="neutral"
-      shadow-intensity="1"
-      exposure="1.2"
-      style="width: 100%; height: 100%; max-width: 900px; max-height: 600px; border-radius: 16px; background:white;"
-    >
-    </model-viewer>
-    
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>3D Car Viewer</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #f4f4f4;
+    }
+    model-viewer {
+      width: 100%;
+      height: 90vh;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+    }
+  </style>
+</head>
+<body>
+  <model-viewer src="scorpio-compressed.glb"
+                alt="3D Car Model"
+                auto-rotate
+                camera-controls
+                ar
+                ar-modes="scene-viewer quick-look webxr">
+  </model-viewer>
+</body>
 </html>
+
 
 
