--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
   </style>
 </head>
 <body>
-  <model-viewer src="scorpio-compressed.glb"
-                alt="3D Car Model"
-                auto-rotate
-                camera-controls
-                ar
-                ar-modes="scene-viewer quick-look webxr">
-  </model-viewer>
+  <model-viewer src="./scorpio-compressed.glb"
+              alt="3D Car Model"
+              auto-rotate
+              camera-controls
+              ar
+              style="width: 100%; height: 90vh; background-color: lightblue;">
+</model-viewer>
+
 </body>
 </html>
 
