--- a/index.html
+++ b/index.html
@@ -19,20 +19,35 @@
       height: 90vh;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      background-color: lightblue; /* force background so we know canvas is there */
     }
   </style>
 </head>
 <body>
-  <model-viewer src="./scorpio-compressed.glb"
-              alt="3D Car Model"
-              auto-rotate
-              camera-controls
-              ar
-              style="width: 100%; height: 90vh; background-color: lightblue;">
-</model-viewer>
+  <model-viewer id="carModel"
+                src="./scorpio-compressed.glb"
+                alt="3D Car Model"
+                auto-rotate
+                camera-controls
+                ar>
+  </model-viewer>
 
+  <script>
+    const modelViewer = document.getElementById("carModel");
+
+    // Fires when model is loaded successfully
+    modelViewer.addEventListener("load", () => {
+      console.log("✅ Model loaded successfully!");
+    });
+
+    // Fires when there is an error loading the model
+    modelViewer.addEventListener("error", (event) => {
+      console.error("❌ Error loading model:", event);
+      alert("Error loading the model. Check console for details.");
+    });
+
+    // Debug log to confirm script is running
+    console.log("🚀 index.html loaded, waiting for model...");
+  </script>
 </body>
 </html>
-
-
-
