--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3D Car Viewer</title>
+
+  <!-- Meshopt Decoder -->
+  <script type="module">
+    import { MeshoptDecoder } from 'https://unpkg.com/meshoptimizer/meshopt_decoder.js';
+    self.MeshoptDecoder = MeshoptDecoder;
+  </script>
+
+  <!-- Model Viewer -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
   <style>
     body {
       margin: 0;
