--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3D Car Viewer</title>
 
-  <!-- Model Viewer -->
+  <!-- Latest Model Viewer -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
   <style>
@@ -27,25 +27,22 @@
   </style>
 </head>
 <body>
-  <!-- Use meshopt-decoder attribute for compressed GLB -->
   <model-viewer id="carModel"
                 src="./scorpio-compressed.glb"
                 alt="3D Car Model"
                 auto-rotate
                 camera-controls
                 ar
-                meshopt-decoder="https://unpkg.com/meshoptimizer/meshopt_decoder.module.js">
+                meshopt-decoder="https://cdn.jsdelivr.net/npm/meshoptimizer@0.21.1/meshopt_decoder.js">
   </model-viewer>
 
   <script>
     const modelViewer = document.getElementById("carModel");
 
-    // Fires when model is loaded successfully
     modelViewer.addEventListener("load", () => {
       console.log("✅ Model loaded successfully!");
     });
 
-    // Fires when there is an error loading the model
     modelViewer.addEventListener("error", (event) => {
       console.error("❌ Error loading model:", event);
       alert("Error loading the model. Check console for details.");
