--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <model-viewer id="carModel"
-                src="./scorpio-compressed.glb"
+                src="https://drive.google.com/uc?export=download&id=1dDuJjm0cUN2TqgZg6JTg4EajWI5iY6lv"
                 alt="3D Car Model"
                 auto-rotate
                 camera-controls
